--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "react": "16.9.0",
         "react-dom": "16.9.0",
         "react-hot-loader": "^4.12.19",
-        "react-native": "0.61.5"
+        "react-native": "0.61.5",
+        "react-native-dom": "^0.5.0"
     },
     "dependencies": {
         "keymirror": "^0.1.1",
@@ -41,7 +42,7 @@
         "shaka-player": "^2.5.9"
     },
     "scripts": {
-        "lint": "yarn eslint *.js"
+        "lint": "eslint ."
     },
     "files": [
         "android-exoplayer",
